<resources>
    <string name="app_name">Ejercicio 07</string>
    <string name="Titulo">Manejo Intenciones</string>
    <string name="boton1">Tarea Explicita</string>
    <string name="boton2">Tarea Implicita</string>
    <string name="ventana2">Teclado</string>
    <string name="DatoIngresado">0</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btnb">B</string>
    <string name="btnc">C</string>
</resources>